--- a/nestjs/cqrs-example/package.json
+++ b/nestjs/cqrs-example/package.json
@@ -22,7 +22,10 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/cqrs": "^10.2.6",
     "@nestjs/platform-express": "^10.0.0",
+    "nestjs-prisma": "^0.22.0",
+    "prisma": "^5.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
