--- a/lambda/aws-node-express-api-project/package.json
+++ b/lambda/aws-node-express-api-project/package.json
@@ -5,5 +5,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "serverless-http": "^3.1.1"
+  },
+  "scripts": {
+    "start": "node local-server.js"
   }
 }
