content negotiation 관련 예제 코드 추가
- jackson xml mapper 관련 클래스 및 설정, 의존성 추가
- Accept 헤더로 `application/xml`로 요청 시 xml로 응답

--- a/spring/spring-examples/build.gradle
+++ b/spring/spring-examples/build.gradle
@@ -17,6 +17,8 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.14.2' // for XML support
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
