Add vitest coverage command

--- a/nodejs/vitest/package.json
+++ b/nodejs/vitest/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "conv": "vitest run --coverage"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@vitest/coverage-v8": "^1.6.0",
     "vitest": "^1.6.0"
   }
 }
