--- a/spring/spring-ai/src/main/resources/application.yaml
+++ b/spring/spring-ai/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 spring:
   ai:
     anthropic:
-      api-key: <YOUR_API_KEY>
+      api-key: ${ANTHROPIC_API_KEY}
       chat:
         options:
           model: claude-3-5-sonnet-20240620
